--- a/src/public/playlists.handlebars
+++ b/src/public/playlists.handlebars
@@ -1,5 +1,7 @@
 <div>
     <form method="post" action="http://localhost:8080/create-mix">
+        <input type="text" id="new-playlist-name" name="NAME">
+        <br>
         {{#each playlists}}
         <input type="checkbox" id="{{@index}}" name="{{this.name}}" value="{{this.id}}">
         <label for="{{this.name}}"> {{this.name}}</label><br>
