added tls to dev environment. fixed upload playlist bug.

--- a/src/public/playlists.handlebars
+++ b/src/public/playlists.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <form method="post" action="http://localhost:8080/create-mix">
+    <form method="post" action="https://localhost:8080/create-mix">
         <input type="text" id="new-playlist-name" name="NAME">
         <br>
         {{#each playlists}}
