--- a/src/public/profile.handlebars
+++ b/src/public/profile.handlebars
@@ -2,5 +2,5 @@
     hello {{ username }}
 </div>
 <div>
-    <a href="http://localhost:8080/select-playlists"> create mix </a>
+    <a href="https://localhost:8080/select-playlists"> create mix </a>
 </div>
